<resources>
    <string name="animation_file">onboarding_animation.json</string>
    <string name="app_name">YouRun</string>
    <string name="login_tv1">만나지 않아도 함께 뛰어요!</string>
    <string name="login_tv2">이메일과 카카오톡으로 로그인 가능해요.</string>
    <string name="et_emil">이메일</string>
    <string name="btn_id">아이디 찾기</string>
    <string name="btn_password">비밀번호 찾기</string>
    <string name="btn_signup">회원가입</string>
    <string name="tv_sns">SNS계정으로 시작하기</string>
    <string name="signup_tv1">안녕하세요!</string>
    <string name="signup_tv2">유런에 오신 걸 환영해요</string>
    <string name="signup_tv3">처음 오셨나요? 필요한 정보를 입력해주세요.</string>
    <string name="tv_id">아이디</string>
    <string name="tv_password">비밀번호</string>
    <string name="tv_password_hint">영문 + 숫자 포함 8~10자</string>
    <string name="tv_password_check">비밀번호 확인</string>
    <string name="tv_agree">약관동의</string>
    <string name="tv_agree1">(필수)</string>
    <string name="tv_custom_agree1">개인정보 수집/ 이용 동의</string>
    <string name="tv_custom_agree2">유런은 러닝 기록을 공유하는 앱입니다.\n본인의 러닝 거리, 속도, 시간 등의 러닝 정보를\n타인과 공유할 수 있습니다.</string>
    <string name="tv_nickname">닉네임</string>
    <string name="tv_nickname1">띄어쓰기 없이 한글 2~4자만 입력 가능해요</string>
    <string name="tv_tag1">성향태그</string>
    <string name="tv_tag2">내 러닝 스타일을 나타내는 태그 2개를 선택해주세요</string>
    <string name="tv_check_tag1">#느긋하게</string>
    <string name="tv_check_tag2">#음악과</string>
    <string name="tv_check_tag3">#열정적</string>
    <string name="tv_check_tag4">#자기계발</string>
    <string name="tv_check_tag5">#에너자이저</string>
    <string name="tv_check_tag6">#왕초보</string>
    <string name="img_up_background">img_up_background</string>
    <string name="app_exp_up_you_run">YOU+RUN?</string>
    <string name="app_exp_1">님 반가워요 ! \n지금부터 유런에 대해 \n알려드릴게요</string>
    <string name="app_exp_1_1">만나지 않아도 함께 뛰어요, YOU+RUN!</string>
    <string name="app_exp_1_2">유런은 비대면 러닝 메이트와 함께 뛰는 러닝 앱이에요</string>
    <string name="app_exp_2">나는 어떤 캐릭터와 \n어울릴까?</string>
    <string name="app_exp_2_1">러닝 성향 테스트를 통해</string>
    <string name="app_exp_2_2">나와 어울리는 러닝 캐릭터를 알아볼 수 있어요!</string>
    <string name="app_exp_3">러닝 메이트, \n널 이기고 말겠어!</string>
    <string name="app_exp_3_1">비대면 러닝 메이트의 러닝 기록을</string>
    <string name="app_exp_3_2">비교하여 페이스 조절을 하며 뛸 수 있어요!</string>
    <string name="app_exp_4">누가 누가 \n더 많이, 더 꾸준히 \n러닝 했을까? </string>
    <string name="app_exp_4_1">개인 / 크루 챌린지 참여를 통해</string>
    <string name="app_exp_4_2">상대 크루와 러닝 대결을 즐기고 리워드를 얻어봐요!</string>
    <string name="app_exp_5">이 날, \n얼마나 러닝 했더라?</string>
    <string name="app_exp_5_1">매일 매일 런닝하고</string>
    <string name="app_exp_5_2">캘린더로 나의 기록을 한 눈에 파악할 수 있어요!</string>
    <string name="blur_img">blur</string>
    <string name="characters">characters</string>
    <string name="next">다음</string>
    <string name="back_button">back_button</string>
    <string name="home">홈</string>
    <string name="mate">메이트</string>
    <string name="running">러닝</string>
    <string name="challenge">챌린지</string>
    <string name="myRun">마이런</string>
    <string name="fab_running">fab_running\n</string>
    <string name="main_run_together">님이 유런과 함께 뛴 지</string>
    <string name="main_run_day">일째!</string>
    <string name="badge_count">개</string>
    <string name="main_logo">main_logo</string>
    <string name="main_calendar">main_calendar</string>
    <string name="main_background_view">main_background_view</string>
    <string name="main_bgd_gradient">main_bgd_gradient</string>
    <string name="img_crew_badge">img_crew_badge</string>
    <string name="img_solo_badge">img_solo_badge</string>
    <string name="img_home_character">img_home_character</string>
    <string name="challenge_now">지금 바로 도전!</string>
    <string name="progressing">진행 중인</string>
    <string name="italic_challenge">CHALLENGE</string>
    <string name="fire">fire</string>
    <string name="crew_btn">crew_btn</string>
    <string name="solo_btn">solo_btn</string>
    <string name="add_challenge">add_challenge</string>
    <string name="crew">크루</string>
    <string name="max_running">최대 거리 러닝!</string>
    <string name="img_user">img_user</string>
    <string name="challenge_state">challenge_state</string>
    <string name="home_banner">home_banner</string>
    <string name="similar_mate">님과 비슷한 러닝 메이트</string>
    <string name="women_running">women_running</string>
    <string name="redirect">redirect</string>
    <string name="ex_index">1</string>
    <string name="user_profile">user_profile</string>
    <string name="ex_user_name">루시</string>
    <string name="user_day">27일째</string>
    <string name="ex_tag">#열정적 #에너자이저</string>
    <string name="mate_heart">mate_heart</string>
    <string name="tv_myrun_tag">2개까지 선택 가능해요</string>
    <string name="tv_myrun_color">프로필 색상</string>
    <string name="tv_myrun">마이런</string>
    <string name="tv_myrun_name">제제</string>
    <string name="tv_myrun_profile">페이스메이커</string>
    <string name="tv_reward1">크루 리워드</string>
    <string name="tv_reward2">개인 리워드</string>
    <string name="tv_mvp">MVP</string>
    <string name="txt_reward1">4</string>
    <string name="txt_reward2">3</string>
    <string name="txt_mvp">3</string>
    <string name="profile_edit">내 정보 수정</string>
    <string name="tv_challenge_title">챌린지 생성하기</string>
    <string name="tv_challenge1">어떤 챌린지를 도전해볼까요?</string>
    <string name="tv_challenge2">크루와 함께 최대 거리 달리기 도전!</string>
    <string name="tv_challenge3">CREW</string>
    <string name="tv_challenge4">누가 누가 더 꾸준히 달리나 도전!</string>
    <string name="tv_challenge5">SOLO</string>
    <string name="tv_solo_challenge1">SOLO CHALLENGE!</string>
    <string name="tv_solo_challenge2">매일 꾸준히 러닝</string>
    <string name="tv_challenge3_distance">거리 설정</string>
    <string name="tv_solo_challenge4">1km</string>
    <string name="tv_solo_challenge4_2">3km</string>
    <string name="tv_solo_challenge4_3">5km</string>
    <string name="tv_challenge5_date">기간 설정</string>
    <string name="tv_challenge6">1월12일부터 1월 15일(4일 간) \n매일 3km 러닝하기!</string>
    <string name="btn_create">생성하기</string>
    <string name="tv_challenge8">생성 시간 기준 24시간 이내 매칭이 되지 않으면 \n챌린지 모집이 자동으로 취소돼요</string>
    <string name="tv_challenge7">생성완료!</string>
    <string name="btn_check">확인</string>
    <string name="tv_crew_challenge1">CREW CHALLENGE!</string>
    <string name="tv_crew_challenge2">최대 거리 러닝</string>
    <string name="tv_crew_challenge3">크루명</string>
    <string name="tv_crew_challenge4">띄어쓰기 없이 한글 2~5자만 입력 가능해요</string>
    <string name="tv_crew_challenge5">동작구사슴 크루와 \n1월 13일 ~ 1월 15일(3일 동안) \n최대 러닝하기!</string>
    <string name="test_btn">성향 테스트 다시 하기</string>
    <string name="tv_challenge">챌린지</string>
    <string name="tv_crew_slogan">어차피 승리는 우리 것</string>
    <string name="tv_crew_name">관악구\n사슴 크루</string>
    <string name="tv_crew_goal">3일 동안 최대 거리 러닝</string>
    <string name="tv_crew_headcount">3/4명</string>
    <string name="tv_reward">리워드</string>
    <string name="tv_crew_rewards">내가 더 잘 나가 1개 / MVP 달성 시 2개</string>
    <string name="tv_personal_rewards">미룬이 말고 꾸준히 1개 / MVP 달성 시 2개</string>
    <string name="tv_period">기간</string>
    <string name="tv_period_detail">2025. 1. 3 ~ 2025. 1. 15</string>
    <string name="tv_subtitle">관악산사슴 크루와 함께!</string>
    <string name="tv_personal_character">TRAIL RUNNER</string>
    <string name="tv_username">루시</string>
    <string name="tv_nickname2">챌린지 메이트</string>
    <string name="tv_hashtag1">#열정적</string>
    <string name="tv_hashtag2">#갓생러</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior2">androidx.coordinatorlayout.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="default_distance">0km</string>
    <string name="distance">거리</string>
    <string name="defalut_time">0분</string>
    <string name="time">시간</string>
    <string name="defalut_pace">00\0km</string>
    <string name="pace">페이스</string>
    <string name="calendar_text">얼마나 뛰었을까요?</string>
    <string name="defalut_date">nnnn년 n월 n일</string>
    <string name="date_check">  유런과 1일째!  </string>
    <string name="tv_mate">메이트</string>
    <string name="today_run">오늘은 어떻게 뛰어볼까요?</string>
    <string name="select_mate">select_mate</string>
    <string name="running_time">running_time</string>
    <string name="running_start">running_start</string>
    <string name="btn_calendar">calendar</string>
    <string name="my_mate">나의 러닝 메이트</string>
    <string name="my_mate_list">my_mate_list</string>
    <string name="boundary_line">boundary_line</string>
    <string name="run_together">함께 뛰어보세요!</string>
    <string name="mate_recommend">러닝 메이트 추천</string>
    <string name="mate_profile">mate_profile</string>
    <string name="question_mark">question_mark</string>
    <string name="running_mate_select">러닝 메이트를 선택해주세요!</string>
    <string name="running_time_set">러닝 시간 설정</string>
    <string name="today_how_run">오늘은 얼마나 뛰어볼까요?</string>
    <string name="mate_run_time">러닝 메이트 루시는 30분을 뛰었어요.</string>
    <string name="more_run">더 달려 볼까요?:)</string>
    <string name="time_15">time_15</string>
    <string name="time_30">time_30</string>
    <string name="time_45">time_45</string>
    <string name="time_60">time_60</string>
    <string name="select_time">select_time</string>
    <string name="speech_bubble">speech_bubble</string>
    <string name="time_to_run">00분 러닝하기!</string>
    <string name="running_character">running_character</string>
    <string name="rotating_circle">bgd_rotating_circle</string>
    <string name="clock">clock</string>
    <string name="running_play_pause">running_play_pause</string>
    <string name="fighting_more">조금만 더 힘내세요!</string>
    <string name="running_complete">5.2km 러닝 완료!</string>
    <string name="txt_to_mate">루시 보다</string>
    <string name="txt_to_distance">0.5km 더 뛰었어요!</string>
    <string name="btn_ok">btn_ok</string>
    <string name="user_distance">20km</string>
    <string name="default_runnerInfo">default_runnerInfo</string>
    <string name="default_tag">#tag1 #tag2</string>
    <string name="default_name">name</string>
    <string name="default_day">default_day</string>
    <string name="default_daylog">0일 연속 최대 거리 러닝</string>
    <string name="challenge_success">챌린지 성공</string>
    <string name="default_success">name와의 러닝 챌린지\n n일째 성공!</string>
    <string name="default_crew_success">관악구 사슴 크루\n총 18km 러닝!</string>
    <string name="challenge_fail">챌린지 실패</string>
    <string name="crew_contribution">크루원 기여도</string>
    <string name="date"> 2025년 1월 </string>
    <string name="crew_name2">크루구호</string>
    <string name="crew_name3">띄어쓰기 포함 한글 3~12자만 입력 가능해요</string>
    <string name="character_dis">캐릭터 설명</string>

    <string name="minute_15">15분</string>
    <string name="minute_30">30분</string>
    <string name="minute_45">45분</string>
    <string name="minute_60">60분</string>
    <string name="app_exp_6">유런과 함께 러닝 할\n준비 되었나요?</string>
    <string name="app_exp_6_1">지금 바로 유런에서</string>
    <string name="app_exp_6_2">다양한 사람들과 함께 러닝을 시작해 보아요!</string>
    <string name="start_yourun">유런 시작하기</string>

    <string name="default_daylog_crew">3일동안 최대 거리 러닝!</string>

</resources>