<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="67dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/idx_challenge_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_index"
        android:textSize="13sp"
        android:fontFamily="@font/roboto_semibold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_user_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/img_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_profile"
        android:src="@drawable/img_user_profile"
        app:layout_constraintStart_toEndOf="@id/idx_challenge_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_user_name"
        android:fontFamily="@font/roboto_semibold"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_user_profile"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp" />

    <View
        android:layout_width="46dp"
        android:layout_height="16dp"
        android:background="@drawable/rounded_corners_day"
        app:layout_constraintStart_toEndOf="@id/user_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="6dp" />

    <TextView
        android:id="@+id/user_run_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_day"
        android:textStyle="normal"
        android:textSize="11sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/user_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="12dp" />

    <View
        android:layout_width="38dp"
        android:layout_height="16dp"
        android:background="@drawable/rounded_corners_distance"
        app:layout_constraintStart_toEndOf="@id/user_run_day"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/user_run_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_distance"
        android:textStyle="normal"
        android:textSize="11sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/user_run_day"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="18dp" />

    <TextView
        android:id="@+id/user_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_tag"
        android:textStyle="normal"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/img_user_profile"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp" />

    <ImageButton
        android:id="@+id/btn_mate_heart"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/mate_heart"
        android:src="@drawable/ic_heart_selector"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>