<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/signup_title_iv"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_signup_bar"
        android:scaleType="fitXY"/>


    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_back"
        android:importantForAccessibility="no"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/signup_title_iv" />


    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="232dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="16sp"
        android:text="@string/signup_tv1"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/signup_tv2"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_1"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/signup_tv3"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_1"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="328sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_rounded_corner"
        android:drawableEnd="@drawable/img_againcheck"
        android:hint="@string/et_emil"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/id_tv"
        app:layout_constraintTop_toBottomOf="@+id/id_tv" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/id_tv"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="328sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_rounded_corner"
        android:drawableEnd="@drawable/ic_visibilityoff"
        android:hint="@string/tv_password_hint"
        android:importantForAccessibility="no"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <TextView
        android:id="@+id/tv_password_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_password_check"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/edit_text_password_check"
        android:layout_width="328sp"
        android:layout_height="60sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_rounded_corner"
        android:drawableEnd="@drawable/ic_visibilityoff"
        android:importantForAccessibility="no"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_password_check"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_check" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@drawable/img_next_btn"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="@id/edit_text_password_check"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_password_check" />


</androidx.constraintlayout.widget.ConstraintLayout>